# bookshelf

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.py
app/: app.py  start.py
app/configs/: __init__.py  database.py
app/crud/: authors.py
app/crud/v1/: __init__.py  authors.py  publishers.py
app/db/: __init__.py  engine.py  models.py
app/migrations/: env.py
app/migrations/versions/: 00fc51feeafe_unique_publisher_name.py  01d6b9982f25_uniq_book_fields_combination.py  17c51778eea0_publisher_table.py  275fe2e0f666_issuance_expiration.py  3891e8e1f43b_column_attributes.py  52b046c68e63_book_title_not_uniq.py  727150a7de8f_cascade_operations.py  866a40221e1d_check_constraint_fix.py  990057c9ea0a_authors_table.py  a0faf2ded155_readers_table.py  a336c9f31505_books_table.py  be154ca65300_readers_table.py  ef380c5054ba_zero_migration.py
app/routers/: __init__.py  authors.py  books.py  health.py  issuances.py  publishers.py  readers.py  reports.py
app/routers/v1/: __init__.py  authors.py  publishers.py
app/schemas/: authors.py  books.py  issuances.py  publishers.py  readers.py
app/utils/: __init__.py  query_params.py
app/utils/crud/: __init__.py  authors.py  base.py  books.py  issuances.py  publishers.py  readers.py
app/utils/report/: __init__.py  builder.py  report.py  sections.py  styles.py
docs/: index.html  openapi.json
scripts/: clear_db.py  create_db_fixtures.py
