[project]
name = "bookshelf"
version = "0.1.0"
description = "REST API Сервис библиотеки, выполненный в рамках тестового задания от 'DNS Teхнологии'"
authors = [
    {name = "Oidaho <oidaho.main@yandex.ru>"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
